--- a/src/goblinherowar/Frame/Home.form
+++ b/src/goblinherowar/Frame/Home.form
@@ -21,7 +21,7 @@
     <Component class="javax.swing.JButton" name="homeStart">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/goblinherowar/Frame/Component/home_start.png"/>
+          <Image iconType="2" name="/Users/peeravich.c/Desktop/Prog Tech/Project/GoblinHeroWar/src/goblinherowar/Frame/Component/home_start.png"/>
         </Property>
       </Properties>
       <Events>
